src/objects/SFL12_Stakeholder__c.object
<CustomObject>
    <description>Who has a Stakeholder in a Risk</description>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <referenceTo>SFL12_Risk__c</referenceTo>
        <relationshipName>R00N700000023TX4EAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Contributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stakeholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stakeholder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000023TX5EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stakeholder</label>
    <nameField>
        <displayFormat>SH-{YYMMDD}{00}</displayFormat>
        <label>Stakeholder Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>